2023-04-08  Niels Möller  <nisse@lysator.liu.se>

	* examples/nettle-benchmark.c (bench_ghash_update): New function.

2023-04-07  Niels Möller  <nisse@lysator.liu.se>

	* ghash-update.c (gcm_gf_mul): Rewrite to avoid side channel
	leakage. Now processes message bits one at a time, using tabulated
	values of the key premultiplied by appropriate powers of x, so
	that the table is accessed in a fixed sequential order.
	Performance penalty, on x86_64, is roughly 3 times.
	(shift_table): Deleted table.
	(gcm_gf_shift_8): Deleted function.

	* ghash-set-key.c (_ghash_set_key): Rewrite table generation.

	* gcmdata.c: Deleted.

2023-04-03  Niels Möller  <nisse@lysator.liu.se>

	From Mamone Tarsha:
	* x86_64/pclmul/ghash-update.asm: New loop to process two blocks
	at a time.
	* x86_64/pclmul/ghash-set-key.asm: Likewise.

2023-03-25  Niels Möller  <nisse@lysator.liu.se>

	* ocb.h (OCB_MAX_NONCE_SIZE): New constant.

2023-02-16  Niels Möller  <nisse@lysator.liu.se>

	* x86_64/sha256-compress-n.asm: Fix incorrect w64 setup. Report
	and fix from Gisle Vanem.

2023-02-08  Niels Möller  <nisse@lysator.liu.se>

	* examples/nettle-benchmark.c (main): Benchmark ocb_aes128.

2023-02-07  Niels Möller  <nisse@lysator.liu.se>

	Implement OCB mode. RFC 7253.
	* block-internal.h (block16_set): New function.

	* ocb.c (ocb_set_key, ocb_set_nonce, ocb_update, ocb_encrypt)
	(ocb_decrypt, ocb_encrypt_message, ocb_decrypt_message): New
	public functions.
	(MEM_ROTATE_RIGHT, MEM_MASK): New macros.
	(extract, update_offset, pad_block, ocb_fill_n, ocb_crypt_n)
	(ocb_checksum_n): New helper functions.
	* ocb-aes128.c (ocb_aes128_set_encrypt_key)
	(ocb_aes128_set_decrypt_key, ocb_aes128_set_nonce)
	(ocb_aes128_update, ocb_aes128_encrypt, ocb_aes128_decrypt)
	(ocb_aes128_digest, ocb_aes128_encrypt_message)
	(ocb_aes128_decrypt_message): New file, new functions.
	* ocb.h: Declare ocb functions.
	(struct ocb_key): New struct.
	(struct ocb_ctx): New struct.